--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -3,6 +3,9 @@ error_log stderr notice;
 pid /var/run/nginx.pid;
 
 worker_processes 1;
+# Includes files with directives to load dynamic modules.
+include /etc/nginx/modules/*.conf;
+include /etc/nginx/stream.conf;
 
 events {
     worker_connections  1024;
@@ -126,5 +129,6 @@ http {
         }
 	include /etc/nginx/server-override/*.conf;
     }
+
     include /etc/nginx/conf.d/*.conf;
 }
